Correct \ref commands.

--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -28,6 +28,7 @@
 \ifcvprfinal\pagestyle{empty}\fi
 
 \usepackage{cleveref}
+\crefname{section}{Section}{Sections}
 \crefname{figure}{Figure}{Figures}
 \crefname{table}{Table}{Tables}
 \crefname{appendix}{Appendix}{Appendices}
@@ -51,14 +52,6 @@
 \newtheorem*{claim}{Claim}
 \newtheorem*{example}{Example}
 \newtheorem*{question}{Question}
-
-
-\def\sec#1{Sec.~\ref{#1}}
-\def\Sec#1{Sec.~\ref{#1}}
-\def\fig#1{Fig.~\ref{#1}}
-\def\Fig#1{Fig.~\ref{#1}}
-\def\tab#1{Table~\ref{#1}}
-\def\Tab#1{Table~\ref{#1}}
 
 \usepackage{enumitem}
 \setlist{leftmargin=*} 
