--- a/cvpr_submission/experiments.tex
+++ b/cvpr_submission/experiments.tex
@@ -105,9 +105,43 @@ finetune the model trained on all tasks on each task $t$ respectively. Given the
 
 \subsubsection{COG}
 \label{sec:reasoning-cog}
-For the COG dataset, the number of task groups (23) is large, so we designed a 2-level hierarchy of the task groups motivated by the
-description of these tasks.
+Since the number of task classes (=23) in the COG dataset is large, we designed a 2-level hierarchy of task groups using the
+description of these tasks, as shown in~\cref{fig:task-groups}.
 
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=\columnwidth]{img/architecture/hierarchy}
+	\caption{Hierarchy of Task Groups}
+	\label{fig:task-groups}
+\end{figure}
+
+\bigskip
+
+For the groups at the lowest level, we chose the following task classes to be placed in those groups:
+\begin{description}
+	\item[Basic:] \textit{ExistShape}, \textit{GetShape},\textit{GetColor}, \textit{ExistColor}, \textit{Exist}
+	\item[Compare Obj-Attr:] \emph{SimpleCompareColor}, \textit{SimpleCompareShape}, \textit{AndSimpleCompareShape}, 
+	\textit{AndSimpleCompareColor};
+	\item[Compare 2 Obj:] \textit{CompareColor}, \textit{CompareShape},  \textit{AndCompareColor}, \textit{AndCompareShape}, 
+	\textit{ExistColorOf}, \textit{ExistShapeOf};
+	\item[Spatial:] \textit{ExistSpace}, \textit{ExistColorSpace}, \textit{ExistShapeSpace}, \textit{GetColorSpace}, \textit{GetShapeSpace};
+	\item[Cognitive:] \textit{ExistLastColorSameShape}, \textit{ExistLastShapeSameColor}, \textit{ExistLastObjectSameObjectdescription}
+\end{description}
+
+
+We then conducted the following experiments using the Canonical variant of the COG dataset, to study 
+whether transfer learning was effective in leveraging information gained by training a group at a higher level
+of the hierarchy to learning the constituent task groups below that group at the leaf level.
+ \begin{itemize}
+	\item Train and test SAMNet on a single task group $t$ for the 5 groups at the lowest level of the hierarchy. 
+	These 5 experiments fit into the traditional ML setup of single-task learning;
+	\item Train on \textbf{Group A} and test separately on \textbf{Basic}, \textbf{Compare Obj-Attr} and \textbf{Compare 2 Obj};
+	\item Train on \textbf{Group B} and test separately on \textbf{Spatial} and \textbf{Cognitive};
+	\item As a baseline, we compared the above results to the earlier experiment shown in~\cref{fig:samnet_cog_detailed}, which
+	can be viewed as training on \textbf{All} and testing on each group at the lowest level separately.
+\end{itemize}
+
+ 
 
 \subsection{Temporal transfer in COG}
 \label{sec:temporal}
@@ -125,7 +159,7 @@ In this case, the SAMNet model again reaches exemplary performance, at 96.7\% ac
 
 \begin{figure}[htb]
 	\centering
-	\includegraphics[width=0.5\textwidth]{img/results/samnet_cog_overall_transfer.png}
+	\includegraphics[width=\columnwidth]{img/results/samnet_cog_overall_transfer.png}
 	\caption{Total accuracies of SAMNet (blue) and COG models (light/dark gray) when testing generalization from Canonical to Hard variants of the dataset.}
 	\label{fig:samnet_cog_overall_transfer}
 \end{figure}
@@ -134,7 +168,6 @@ In this case, the SAMNet model again reaches exemplary performance, at 96.7\% ac
 \subsection{Feature transfer on CLEVR-CoGenT}
 \label{sec:feature}
 \begin{table}[ht]
-	\label{tab:cogent_conditions}
 	\centering
 	\begin{adjustbox}{width=0.45\textwidth}
 		\begin{tabular}{cccc}
@@ -147,6 +180,7 @@ In this case, the SAMNet model again reaches exemplary performance, at 96.7\% ac
 		\end{tabular}
 	\end{adjustbox}
 	\caption{Colors \& shapes combinations present in CoGenT-A \& -B datasets.}
+	\label{tab:cogent_conditions}
 \end{table}
 
 The final set of experiments we consider is related to domain adaptation. %According to \cite{pan2009survey}, this settings considers different but related source and target domains, under a common task.
