--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -88,6 +88,8 @@
 \newcommand{\rhead}{\vec{rh}}
 \newcommand{\whead}{\vec{wh}}
 
+\newcommand{\uX}{\underline{X}}
+
 
 \newcommand{\tk}[1]{\textcolor{red}{TK: #1}}
 \newcommand{\ao}[1]{\textcolor{green}{AO: #1}}
