--- a/cvpr_submission/experiments.tex
+++ b/cvpr_submission/experiments.tex
@@ -92,7 +92,7 @@ Looking at~\cref{fig:CoGenT-results}, SAMNet does well on \textit{Count} and \te
 Nevertheless, significant accuracy gains are noted when training jointly on all tasks (light gray), ranging from 18 points to 37 points on 4 out of 5 tasks. \textit{QueryAttribute} only sees an increase of one point. One could qualify it as \textit{self-sufficient} as it does not appear to benefit from joint training with other tasks. These improvements suggest that related tasks benefit from joint training.
 We plan to run additional experiments to jointly train on $t$ and all possible subsets of the remaining 4 tasks ($2^4$ experiments per task). We hypothesize that the improvements on e.g. \textit{Exist} would mostly originate from training jointly on \textit{CompareAttribute} and \textit{CompareInteger} since all 3 tasks share the same output space (i.e., labels domain).
 
-Finally, the ``all-tasks-but-$t$'' experiments (cyan) demonstrate that while tasks are related, one does not subsume another in terms of learning. Indeed, we can observe that for \textit{CompareAttribute}, while \textit{Exist} and \textit{CompareInteger} share the same output space, including them and holding out \textit{CompareAttribute} from the training set results in poor accuracy. We also observe no learning for \textit{Count} and \textit{QueryAttribute}, caused by these tasks having distinct labels domains, which do not overlap with the other tasks. Thus, if holding out samples from \textit{Count} during training, a model will not be able to predict the corresponding labels.
+Finally, the ``all-tasks-but-$t$'' experiments (yellow) demonstrate that while tasks are related, one does not subsume another in terms of learning. Indeed, we can observe that for \textit{CompareAttribute}, while \textit{Exist} and \textit{CompareInteger} share the same output space, including them and holding out \textit{CompareAttribute} from the training set results in poor accuracy. We also observe no learning for \textit{Count} and \textit{QueryAttribute}, caused by these tasks having distinct labels domains, which do not overlap with the other tasks. Thus, if holding out samples from \textit{Count} during training, a model will not be able to predict the corresponding labels.
 
 \begin{figure}[!t]
 	\centering
@@ -157,7 +157,7 @@ is a slight loss incurred by including everything. As seen in the figure, just j
  \begin{figure}
  	\centering
  	\includegraphics[width=\columnwidth]{img/results/COG_reasoning_transfer}
- 	\caption{CLEVR-CoGenT accuracies for all tasks $t$ when training on $t$ only, training on all tasks jointly and training on all tasks but $t$.} %For all experiments, the validation and test sets are identical.
+ 	\caption{COG accuracies for all task groups $t$ when training on $t$ only, training on Group A or B and training on all tasks.}
  	\label{fig:COG-reasoning-results}
  \end{figure}
  
@@ -212,7 +212,7 @@ If we consider the input domain to be the set of objects with all attributes val
 
 \begin{figure}[!t]
 	\centering
-	\includegraphics[width=0.4\columnwidth]{img/results/CoGenT_B_results.pdf}
+	\includegraphics[width=0.8\columnwidth]{img/results/CoGenT_B_results.pdf}
 	\caption{Test accuracy on CoGenT-A \& -B when training on CoGenT-A (blue) and finetuning on CoGenT-B (gray).}
 	\label{fig:CoGenT-B-results}
 \end{figure}
