--- a/cvpr_submission/transfer_learning.tex
+++ b/cvpr_submission/transfer_learning.tex
@@ -2,7 +2,7 @@
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=\textwidth]{img/architecture/transfer_taxo}
+	\includegraphics[width=0.9\textwidth]{img/architecture/transfer_taxo}
 	\caption{Transfer learning taxonomy.}\label{fig:taskonomy}
 \end{figure*}
 
