--- a/cvpr_submission/experiments.tex
+++ b/cvpr_submission/experiments.tex
@@ -221,4 +221,4 @@ If we consider the input domain to be the set of objects with all attributes val
 	\caption{Test accuracy on CoGenT-A \& -B when training on CoGenT-A (blue) and finetuning on CoGenT-B (gray).}
 	\label{fig:CoGenT-B-results}
 \end{figure}
-Evaluating SAMNet on CoGenT shows that performance is worse on CoGenT-B than CoGenT-A, in line with~\cite{johnson2017inferring, mascharka2018transparency, perez2018film}. Finetuning for a single epoch allows an observable increase of 15 pts on CoGenT-B, and a slight drop on CoGenT-A, also observed in other models.
+Evaluating SAMNet on CoGenT shows that performance is worse on CoGenT-B than CoGenT-A, in line with~\cite{johnson2017inferring, mascharka2018transparency, perez2018film}. Finetuning for a single epoch allows an observable increase of 15 pts on CoGenT-B, and a slight drop on CoGenT-A, also observed with other models.
